<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context="com.ice.mapaice.MainActivity">
    <item
        android:id="@+id/action_settings" android:title="@string/action_settings"
        android:orderInCategory="1" app:showAsAction="never"
        android:icon="@drawable/map" />


    <item
        android:id="@+id/action_settings3" android:title="@string/checar"
        android:orderInCategory="3" app:showAsAction="never"
        android:icon="@drawable/up" />
    <item
        android:id="@+id/action_settings4" android:title="@string/cidade"
        android:orderInCategory="4" app:showAsAction="never"
        android:icon="@drawable/up" />

    <item
        android:id="@+id/menu3"
        android:title="Satélite / Normal"
        android:orderInCategory="5"
        android:icon="@drawable/sat"/>

    <item
        android:id="@+id/menu1"
        android:title="@string/sobre"
        android:orderInCategory="6"
        android:icon="@drawable/sobre"/>
    <item
        android:id="@+id/menu5"
        android:title="@string/tut"
        android:orderInCategory="7"
        android:icon="@drawable/tut"/>
    <item
        android:id="@+id/menu6"
        android:title="@string/erro"
        android:orderInCategory="8"
        android:icon="@drawable/erro"/>
    <item
        android:id="@+id/menu2"
        android:title="Locais"
        android:icon="@drawable/orangedot"
        app:showAsAction="always"
        android:actionLayout="@drawable/orangedot">
        <menu >
            <item
                android:id="@+id/submenu1"
                android:title="Locais" />
        </menu>
    </item>

</menu>
